--- a/style.css
+++ b/style.css
@@ -1,67 +1,59 @@
-body {
-    margin: 60px 0 0 0;
-    padding: 0;
-}
 
-nav {
+nav{
     top: 0;
     left: 0;
-    margin: 5px 15px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5px;
+    padding: 5px 15px;
     color: black;
     font-size: 15px;
-    align-items: center;
-    max-width: 1430px;
+    max-width: 1450px; 
     position: fixed;
     z-index: 1000;
     background-color: white;
-
+    margin: 0; 
 }
 
-.lefts {
-    display: flex;
-    gap: 25px;
-
+.lefts{
+    display: flex;     
+    gap: 25px; 
+    
 }
 
-.lefts a {
+.lefts a{
     text-decoration: none;
     color: black;
-    padding-top: 5px;
+    padding-top:5px;
 }
-
-.solveme {
+.solveme{
     display: inline-block;
     height: 20px;
 }
 
-.rights {
-    display: flex;
-    gap: 25px;
+.rights{
+    display: flex;     
+    gap: 25px; 
 }
 
 
-.rights a {
+.rights a{
     text-decoration: none;
     color: black;
-    padding-top: 10px;
+    padding-top:10px;
 }
-
 .rights #signup {
     background-color: #108a08;
     padding: 10px 20px;
     border-radius: 12px;
-    color: white;
+    color:white;
 }
 
-.rights #signup:hover {
-    background-color: #0cb800;
-    color: white;
-
+.rights #signup:hover{
+    background-color:#0cb800;
+    color:white;
+    
 }
 
 
@@ -127,6 +119,7 @@ nav {
 
 .footer {
     margin-top:20px;
+    width: 100%;
     background-color: rgb(248, 245, 245);
     border-radius: 5px;
     padding: 20px;
