--- a/styleAboutUs.css
+++ b/styleAboutUs.css
@@ -3,23 +3,22 @@ body{
     padding:0;
 }
 
+
 nav{
     top: 0;
     left: 0;
-    margin: 5px 15px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding:5px;
+    padding: 5px 15px;
     color: black;
     font-size: 15px;
-    align-items: center; 
-    max-width: 1430px;
+    max-width: 1450px; 
     position: fixed;
     z-index: 1000;
     background-color: white;
-
+    margin: 0; 
 }
 
 .lefts{
@@ -61,7 +60,6 @@ nav{
     color:white;
     
 }
-
 header {
     display: grid;
     grid-template-columns: 1fr 1fr; 
