--- a/styleWork.css
+++ b/styleWork.css
@@ -1,25 +1,19 @@
-body{
-    margin: 60px 0 0 0;
-    padding:0;
-}
 
 nav{
     top: 0;
     left: 0;
-    margin: 5px 15px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding:5px;
+    padding: 5px 15px;
     color: black;
     font-size: 15px;
-    align-items: center; 
-    max-width: 1430px;
+    max-width: 1450px; 
     position: fixed;
     z-index: 1000;
     background-color: white;
-
+    margin: 0; 
 }
 
 .lefts{
