--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ nav{
     justify-content: space-between;
     padding: 5px 15px;
     color: black;
-    font-size: 15px;
-    max-width: 1450px; 
+    font-size: 15px; 
     position: fixed;
     z-index: 1000;
     background-color: white;
@@ -48,6 +47,7 @@ nav{
     padding: 10px 20px;
     border-radius: 12px;
     color:white;
+    margin-right: 20px;
 }
 
 .rights #signup:hover{
@@ -118,6 +118,8 @@ nav{
 }
 
 .footer {
+    position: absolute;
+    bottom: 0;
     margin-top:20px;
     width: 100%;
     background-color: rgb(248, 245, 245);
