--- a/styleAboutUs.css
+++ b/styleAboutUs.css
@@ -14,7 +14,6 @@ nav{
     padding: 5px 15px;
     color: black;
     font-size: 15px;
-    max-width: 1450px; 
     position: fixed;
     z-index: 1000;
     background-color: white;
@@ -52,6 +51,7 @@ nav{
     background-color: #108a08;
     padding: 10px 20px;
     border-radius: 12px;
+    margin-right: 20px;
     color:white;
 }
 
