--- a/styleWork.css
+++ b/styleWork.css
@@ -9,7 +9,6 @@ nav{
     padding: 5px 15px;
     color: black;
     font-size: 15px;
-    max-width: 1450px; 
     position: fixed;
     z-index: 1000;
     background-color: white;
@@ -48,6 +47,7 @@ nav{
     padding: 10px 20px;
     border-radius: 12px;
     color:white;
+    margin-right:20px ;
 }
 
 .rights #signup:hover{
