--- a/stylecontact.css
+++ b/stylecontact.css
@@ -14,7 +14,6 @@ nav{
     padding: 5px 15px;
     color: black;
     font-size: 15px;
-    max-width: 1450px; 
     position: fixed;
     z-index: 1000;
     background-color: white;
@@ -35,6 +34,7 @@ nav{
 .solveme{
     display: inline-block;
     height: 20px;
+    
 }
 
 .rights{
@@ -53,6 +53,7 @@ nav{
     padding: 10px 20px;
     border-radius: 12px;
     color:white;
+    margin-right:20px;
 }
 
 .rights #signup:hover{
