--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ nav{
     max-width: 1250px;
     height: 650px;
     border-radius: 20px;
-    background-image: url(/img/pro.jpg);
+    background-image: url(img/pro.jpg);
     background-size: cover;
     position: relative;
 
