--- a/style.css
+++ b/style.css
@@ -1,66 +1,87 @@
-
-nav{
+nav {
     top: 0;
     left: 0;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5px 15px;
+    padding: 0.6vh 2vh;
     color: black;
-    font-size: 15px; 
+    font-size: 8px;
+
+    @media (min-width: 768px) {
+        font-size: 12px;
+    }
+
+    @media (min-width: 1200px) {
+        font-size: 14px;
+    }
+    
+    @media (min-width:1400px) {
+        font-size:16px;
+    }
+
+    @media(min-width: 1600px){
+        font-size: 18px;
+    }
+    @media (min-width: 1800px) {
+        font-size: 20px;
+    }
+
     position: fixed;
     z-index: 1000;
     background-color: white;
-    margin: 0; 
+    margin: 0;
 }
 
-.lefts{
-    display: flex;     
-    gap: 25px; 
-    
+.lefts {
+    display: flex;
+    gap: 25px;
+
 }
 
-.lefts a{
+.lefts a {
     text-decoration: none;
     color: black;
-    padding-top:5px;
+    padding-top: 5px;
 }
-.solveme{
+
+.solveme {
     display: inline-block;
     height: 20px;
 }
 
-.rights{
-    display: flex;     
-    gap: 25px; 
+.rights {
+    display: flex;
+    gap: 25px;
 }
 
 
-.rights a{
+.rights a {
     text-decoration: none;
     color: black;
-    padding-top:10px;
+    padding-top: 10px;
 }
+
 .rights #signup {
     background-color: #108a08;
     padding: 10px 20px;
     border-radius: 12px;
-    color:white;
+    color: white;
     margin-right: 20px;
 }
 
-.rights #signup:hover{
-    background-color:#0cb800;
-    color:white;
-    
+.rights #signup:hover {
+    background-color: #0cb800;
+    color: white;
+
 }
 
 
 .img {
     margin: 20px auto;
-    max-width: 1250px;
-    height: 650px;
+    width: 80%;
+    height: 90vh;
     border-radius: 20px;
     background-image: url("./img/pro.jpg");
     background-size: cover;
@@ -70,47 +91,122 @@ nav{
 
 .heading1 {
     position: absolute;
-    font-size: 86px;
+    font-size: 50px;
     color: #E6D6D6;
-    margin: 100px 0 10px 100px;
-    width: 600px;
+    margin: 14vh 0 4vh 14vh;
+    width: 70vh;
+
+
+    @media (min-width: 800px) {
+        font-size: 56px;
+    }
+    
+    @media (min-width: 1000px) {
+        font-size: 66px;
+    }
+
+    @media (min-width: 1200px) {
+        font-size: 76px;
+    }
+    
+    @media (min-width:1400px) {
+        font-size:86px;
+    }
+
+    @media(min-width: 1600px){
+        font-size: 96px;
+    }
+    @media (min-width: 1800px) {
+        font-size: 106px;
+    }
+
 }
+
 .search {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 410px;
-    height: 65px;
+    width: 35%;
+    height: 10%;
     background-color: white;
     position: absolute;
-    bottom: 150px;
-    padding: 5px 0;
+    bottom: 21vh;
+    padding: 0.7vh 0;
     border-radius: 25px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    left: 105px;
+    left: 13vh;
 }
 
 .search-input {
     border: none;
     background: white;
     color: black;
-    font-size: 18px;
-    padding: 10px;
+    font-size:10px;
+    padding: 2vh 3vh;
     outline: none;
     flex: 1;
     border-radius: 20px;
+
+
+     @media (min-width: 800px) {
+        font-size: 12px;
+    }
+    
+    @media (min-width: 1000px) {
+        font-size: 14px;
+    }
+
+    @media (min-width: 1200px) {
+        font-size: 16px;
+    }
+    
+    @media (min-width:1400px) {
+        font-size:18px;
+    }
+
+    @media(min-width: 1600px){
+        font-size: 20px;
+    }
+    @media (min-width: 1800px) {
+        font-size: 22px;
+    }
+
 }
 
 .search-button {
-    width: 75px;
-    height: 75px;
+    width: 18%;
+    height: 120%;
     border: none;
     border-radius: 24px;
     background-color: #108a08;
     color: white;
     cursor: pointer;
-    font-size: 38px;
-     
+    font-size: 16px;
+
+    
+     @media (min-width: 800px) {
+        font-size: 20px;
+    }
+    
+    @media (min-width: 1000px) {
+        font-size: 26px;
+    }
+
+    @media (min-width: 1200px) {
+        font-size: 32px;
+    }
+    
+    @media (min-width:1400px) {
+        font-size:38px;
+    }
+
+    @media(min-width: 1600px){
+        font-size: 42px;
+    }
+    @media (min-width: 1800px) {
+        font-size: 48px;
+    }
+
 }
 
 .search-button:hover {
@@ -118,26 +214,45 @@ nav{
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    margin-top:20px;
+
+    margin-top: 1vh;
     width: 100%;
     background-color: rgb(248, 245, 245);
     border-radius: 5px;
-    padding: 20px;
-    text-align: center; 
-    width: 100%;        
+    padding: 3vh;
+    text-align: center;
+    width: 100%;
     box-sizing: border-box;
 }
 
 .foot {
-    width: 300px;
+    width: 100%;
     text-align: center;
     display: inline-block;
     transition: color 0.5s ease;
+    font-size: 10px;
+
+      @media (min-width: 768px) {
+        font-size: 12px;
+    }
+
+    @media (min-width: 1200px) {
+        font-size: 14px;
+    }
+    
+    @media (min-width:1400px) {
+        font-size:16px;
+    }
+
+    @media(min-width: 1600px){
+        font-size: 18px;
+    }
+    @media (min-width: 1800px) {
+        font-size: 20px;
+    }
+
 }
 
 .foot:hover {
     color: green;
 }
-
