--- a/style.css
+++ b/style.css
@@ -86,14 +86,20 @@ nav {
     background-image: url("./img/pro.jpg");
     background-size: cover;
     position: relative;
+    display: flex;         
+    align-items: flex-start; 
+    
+}
 
+.rightside {
+    margin-top: 8vh;
+    flex-direction: column;
 }
 
 .heading1 {
-    position: absolute;
     font-size: 50px;
     color: #E6D6D6;
-    margin: 14vh 0 4vh 14vh;
+    margin: 7vh 0 4vh 14vh;
     width: 70vh;
 
 
@@ -123,28 +129,24 @@ nav {
 }
 
 .search {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 35%;
-    height: 10%;
+    text-align: center;
+    padding: 0 auto;
+    width: 22vw;
     background-color: white;
-    position: absolute;
-    bottom: 21vh;
-    padding: 0.7vh 0;
     border-radius: 25px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    left: 13vh;
+    margin-left:16%;
+    display: flex;  
+
 }
 
 .search-input {
+    outline: none;
     border: none;
     background: white;
     color: black;
     font-size:10px;
     padding: 2vh 3vh;
-    outline: none;
-    flex: 1;
     border-radius: 20px;
 
 
@@ -174,10 +176,10 @@ nav {
 }
 
 .search-button {
-    width: 18%;
-    height: 120%;
+    width:10vw;
+    height: 5vw;
     border: none;
-    border-radius: 24px;
+    border-radius: 15px;
     background-color: #108a08;
     color: white;
     cursor: pointer;
