--- a/style.css
+++ b/style.css
@@ -88,8 +88,46 @@ nav {
     position: relative;
     display: flex;         
     align-items: flex-start; 
-    
 }
+
+@media (max-width: 767px) {
+    .img {
+        width: 10%;           
+        height: auto;           
+        margin: 1000px;               
+        border-radius: 0;        
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    .rightside {
+        margin-top: 20px;
+        padding: 0 10px;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .heading1 {
+        font-size: 100px;         
+        text-align: center;
+        width: 90%;
+    }
+
+    .search {
+        width: 90%;
+        flex-direction: column;
+        margin: 10px auto;
+    }
+
+    .search-input, .search-button {
+        width: 100%;
+        font-size: 16px;
+        margin: 5px 0;
+    }
+}
+
 
 .rightside {
     margin-top: 8vh;
