--- a/stylecontact.css
+++ b/stylecontact.css
@@ -135,11 +135,12 @@ nav{
 
     margin-top: 1vh;
     width: 100%;
-    background-color: rgb(248, 245, 245);
+    background-color: rgb(0, 0, 0);
     border-radius: 5px;
     padding: 3vh;
     text-align: center;
     width: 100%;
+    color:white;
     box-sizing: border-box;
 }
 
