--- a/style.css
+++ b/style.css
@@ -222,12 +222,13 @@ nav {
 
 @media (max-width: 480px) {
     nav {
-        font-size: 10px;
+        font-size: 7px;
+        padding:1px 0 1px 3px;
     }
 
     .lefts {
         display: flex;
-        gap: 10px;
+        gap: 5px;
     }
 
     .lefts a {
@@ -238,12 +239,13 @@ nav {
 
     .solveme {
         display: inline-block;
-        height: 14px;
+        height: 11px;
     }
 
     .rights {
         display: flex;
-        gap: 10px;
+        gap: 5px;
+        margin-right:-10px;
     }
 
 
@@ -258,7 +260,6 @@ nav {
         padding: 6px 15px;
         border-radius: 8px;
         color: white;
-        margin-right: 20px;
     }
 
     .img {
@@ -271,26 +272,27 @@ nav {
     }
 
     .heading1 {
-        font-size: 45px;
-        margin-left: 45px;
+        margin-top:50px;
+        font-size: 32px;
+        margin-left: 35px;
     }
 
     .search {
-        margin-left: 45px;
-        width: 220px;
+        margin-left: 35px;
+        width: 187px;
         border-radius: 8px;
-        height: 42px;
+        height: 40px;
     }
 
     .search-input {
-        font-size: 12px;
-        padding: 6px 15px;
+        font-size: 10px;
+        padding: 4px 15px;
     }
 
     .search-button {
         width: 60px;
-        height: 43px;
-        font-size: 16px;
+        height: 41px;
+        font-size: 12px;
         border-radius: 10px;
         margin-right: -2px;
     }
@@ -300,7 +302,7 @@ nav {
         text-align: center;
         display: inline-block;
         transition: color 0.5s ease;
-        font-size: 12px;
+        font-size: 10px;
     }
 
 }
