--- a/styleWork.css
+++ b/styleWork.css
@@ -1,5 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
-nav{
+nav {
     top: 0;
     left: 0;
     width: 100%;
@@ -12,155 +16,159 @@ nav{
     position: fixed;
     z-index: 1000;
     background-color: white;
-    margin: 0; 
+    margin: 0;
 }
 
-.lefts{
-    display: flex;     
-    gap: 25px; 
-    
+.lefts {
+    display: flex;
+    gap: 25px;
+
 }
 
-.lefts a{
+.lefts a {
     text-decoration: none;
     color: black;
-    padding-top:5px;
+    padding-top: 5px;
 }
-.solveme{
+
+.solveme {
     display: inline-block;
     height: 20px;
 }
 
-.rights{
-    display: flex;     
-    gap: 25px; 
+.rights {
+    display: flex;
+    gap: 25px;
 }
 
 
-.rights a{
+.rights a {
     text-decoration: none;
     color: black;
-    padding-top:10px;
+    padding-top: 10px;
 }
+
 .rights #signup {
     background-color: #108a08;
     padding: 10px 20px;
     border-radius: 12px;
-    color:white;
-    margin-right:20px ;
+    color: white;
+    margin-right: 20px;
 }
 
-.rights #signup:hover{
-    background-color:#0cb800;
-    color:white;
-    
+.rights #signup:hover {
+    background-color: #0cb800;
+    color: white;
+
 }
 
-header{
+header {
     position: relative;
-    width:100%;
+    width: 100%;
     height: 700px;
-    display:flex;
+    display: flex;
     justify-content: space-between;
-    
+
 }
 
-.imgheader{
-    
+.imgheader {
+
     max-width: 100%;
-    width: 650px; 
+    width: 650px;
     height: auto;
     margin: 40px 70px 0 0;
     border-radius: 50px 250px;
     display: block;
+    flex: 2;
 }
 
-.leftside{
+.leftside {
+    display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
-.heading1{
+.heading1 {
     font-size: clamp(32px, 6vw, 96px);
-    margin:120px 0 10px 80px;
+    margin: 120px 0 10px 80px;
 }
 
-.heading2{
+.heading2 {
     font-size: clamp(18px, 4vw, 36px);
     color: rgb(82, 66, 66);
-    margin-left:100px;
+    margin-left: 100px;
 
 }
 
-.getstarted{
+.getstarted {
     font-size: clamp(18px, 4vw, 36px);
     text-align: center;
     max-width: 400px;
     background-color: #108A00;
-    padding:10px 0;
+    padding: 10px 0;
     border-radius: 20px;
-    cursor:pointer;
-    margin-left:100px;
+    cursor: pointer;
+    margin-left: 100px;
 }
 
-.getstarted a{
-    color:white;
+.getstarted a {
+    color: white;
     text-decoration: none;
 }
 
 .getstarted:hover {
-    background-color:#1ed905 ;
+    background-color: #1ed905;
 }
 
 #head {
     font-size: clamp(24px, 5vw, 65px);
-    margin:100px 0 60px 80px;
+    margin: 100px 0 60px 80px;
 }
 
 #choosearea {
-    display:flex;
+    display: flex;
     flex-direction: row;
-    justify-content:center;
-    gap:60px;
-    flex-wrap: wrap; 
+    justify-content: center;
+    gap: 60px;
+    flex-wrap: wrap;
 }
 
-.card{
+.card {
     background-color: #E7EFFF;
     width: 400px;
     height: 400px;
-    margin-bottom:50px;
+    margin-bottom: 50px;
     border-radius: 30px;
-     text-align: center;
+    text-align: center;
 }
 
 .card img {
-    width:300px;
+    width: 300px;
     height: 200px;
-    margin:20px 50px 0 50px;
+    margin: 20px 50px 0 50px;
     border-radius: 30px;
 }
 
 
-.follow{
+.follow {
     display: inline-block;
     background-color: antiquewhite;
     font-size: 17px;
-    padding:10px 30px;
+    padding: 10px 30px;
     text-align: center;
     border-radius: 12px;
     transition: all 0.5s ease;
 }
 
-.follow a{
+.follow a {
     text-decoration: none;
     color: black;
 }
 
-.follow:hover{
+.follow:hover {
     background-color: rgb(232, 186, 128);
     box-shadow: 2px 2px 5px black;
 }
-
 .footer {
 
     margin-top: 1vh;
@@ -178,29 +186,250 @@ header{
     text-align: center;
     display: inline-block;
     transition: color 0.5s ease;
-    font-size: 10px;
-
-      @media (min-width: 768px) {
-        font-size: 12px;
-    }
-
-    @media (min-width: 1200px) {
-        font-size: 14px;
-    }
-    
-    @media (min-width:1400px) {
-        font-size:16px;
-    }
-
-    @media(min-width: 1600px){
-        font-size: 18px;
-    }
-    @media (min-width: 1800px) {
-        font-size: 20px;
-    }
-
+    font-size: 16px;
 }
 
 .foot:hover {
     color: green;
+}
+
+
+
+@media (max-width:768px) {
+    nav {
+        font-size: 12px;
+        padding: 4px 10px;
+    }
+
+
+    .imgheader {
+
+        width: 500px;
+        height: auto;
+        margin: 90px 0 0 8px;
+        border-radius: 35px 190px;
+        display: block;
+    }
+
+    .leftside {
+        flex-direction: column;
+        margin-right: 40px;
+        margin-left: 20px;
+        width: 600px;
+    }
+
+    .heading1 {
+        font-size: 36px;
+        margin: 140px 0 0px 30px;
+    }
+
+    .heading2 {
+        font-size: 20px;
+        color: rgb(82, 66, 66);
+        margin-left: 30px;
+
+    }
+
+    .getstarted {
+        font-size: 18px;
+        text-align: center;
+        width: 160px;
+        background-color: #108A00;
+        padding: 10px 0;
+        border-radius: 20px;
+        cursor: pointer;
+        margin-left: 25px;
+    }
+
+    #head {
+        font-size: 40px;
+        margin: 40px 0 60px 40px;
+    }
+
+    .card {
+        background-color: #E7EFFF;
+        width: 450px;
+        height: 450px;
+        margin-bottom: 30px;
+        border-radius: 20px;
+        text-align: center;
+    }
+
+    .card img {
+        width: 330px;
+        height: 250px;
+        margin: 30px 60px 0px 60px;
+        border-radius: 30px;
+    }
+
+
+
+
+
+
+    
+    .footer {
+        margin-top: 1vh;
+        width: 100%;
+        background-color: rgb(248, 245, 245);
+        border-radius: 5px;
+        padding: 2vh;
+        text-align: center;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .foot {
+        width: 100%;
+        text-align: center;
+        display: inline-block;
+        transition: color 0.5s ease;
+        font-size: 14px;
+    }
+
+}
+
+@media (max-width: 480px) {
+    nav {
+        font-size: 7px;
+        padding: 1px 0 1px 3px;
+    }
+
+    .lefts {
+        display: flex;
+        gap: 5px;
+    }
+
+    .lefts a {
+        text-decoration: none;
+        color: black;
+        padding-top: 3px;
+    }
+
+    .solveme {
+        display: inline-block;
+        height: 11px;
+    }
+
+    .rights {
+        display: flex;
+        gap: 5px;
+        margin-right: -10px;
+    }
+
+
+    .rights a {
+        text-decoration: none;
+        color: black;
+        padding-top: 6px;
+    }
+
+    .rights #signup {
+        background-color: #108a08;
+        padding: 6px 15px;
+        border-radius: 8px;
+        color: white;
+    }
+
+
+    header {
+        flex-direction: column;
+        height: auto;
+        padding: 20px;
+    }
+
+    .leftside {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .heading1 {
+        font-size: 22px;
+        text-align: center;
+        margin: 20px 0 10px 0;
+    }
+
+    .heading2 {
+        font-size: 16px;
+        text-align: center;
+        margin: 0 0 20px 0;
+        color: rgb(82, 66, 66);
+    }
+
+    .getstarted {
+        font-size: 16px;
+        width: 150px;
+        padding: 8px 0;
+        border-radius: 15px;
+        margin-bottom: 20px;
+    }
+
+    .imgheader {
+        width: 90%;
+        max-width: 380px;
+        height: auto;
+        margin: 0 auto 20px auto;
+        border-radius: 25px 80px;
+        display: block;
+    }
+
+    #head {
+        margin-left: 20px;
+        font-size: 30px;
+    }
+
+
+    .card {
+        background-color: #E7EFFF;
+        height: auto;
+        margin-bottom: 20px;
+        text-align: center;
+        border-radius: 30px;
+        overflow: hidden;
+        margin-left: 40px;
+
+
+    }
+
+    .card h2 {
+        margin: 5px 0;
+        font-size: 26px;
+    }
+
+    .card p {
+        margin: 5px 0;
+        font-size: 14px;
+    }
+
+    .follow {
+        display: inline-block;
+        background-color: antiquewhite;
+        font-size: 13px;
+        padding: 10px 20px;
+        text-align: center;
+        border-radius: 12px;
+        transition: all 0.5s ease;
+    }
+
+    .card img {
+        width: 100%;
+        height: auto;
+        max-height: 200px;
+        margin: 0;
+        display: block;
+        object-fit: cover;
+    }
+
+
+     .foot {
+        width: 100%;
+        text-align: center;
+        display: inline-block;
+        transition: color 0.5s ease;
+        font-size: 10px;
+    }
+
 }
