--- a/styleWork.css
+++ b/styleWork.css
@@ -248,18 +248,28 @@ header {
 
     .card {
         background-color: #E7EFFF;
-        width: 450px;
-        height: 450px;
+        width: 300px;
+        height: 330px;
         margin-bottom: 30px;
         border-radius: 20px;
         text-align: center;
     }
 
     .card img {
-        width: 330px;
-        height: 250px;
-        margin: 30px 60px 0px 60px;
+        width: 250px;
+        height: 200px;
+        margin: 20px 25px 0px 25px;
         border-radius: 30px;
+    }
+
+    .card h2 {
+        margin: 8px 0;
+        font-size: 20px;
+    }
+
+    .card p {
+        margin: 8px 0;
+        font-size: 12px;
     }
 
 
