--- a/styleWork.css
+++ b/styleWork.css
@@ -145,8 +145,15 @@ header {
 .card img {
     width: 300px;
     height: 200px;
-    margin: 20px 50px 0 50px;
+    margin: 20px 50px 25px 50px;
     border-radius: 30px;
+}
+.card h2{
+    margin-bottom: 10px;
+}
+
+.card p{
+     margin-bottom: 20px;
 }
 
 
