--- a/styleAboutUs.css
+++ b/styleAboutUs.css
@@ -1,224 +1,5 @@
-body{
-    margin: 60px 0 0 0;
-    padding:0;
+img {
+    width:100px;
+    max-width: 150px;
 }
 
-nav {
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.6vh 2vh;
-    color: black;
-    font-size: 8px;
-
-    @media (min-width: 768px) {
-        font-size: 12px;
-    }
-
-    @media (min-width: 1200px) {
-        font-size: 14px;
-    }
-    
-    @media (min-width:1400px) {
-        font-size:16px;
-    }
-
-    @media(min-width: 1600px){
-        font-size: 18px;
-    }
-    @media (min-width: 1800px) {
-        font-size: 20px;
-    }
-
-    position: fixed;
-    z-index: 1000;
-    background-color: white;
-    margin: 0;
-}
-
-.lefts {
-    display: flex;
-    gap: 25px;
-
-}
-
-.lefts a {
-    text-decoration: none;
-    color: black;
-    padding-top: 5px;
-}
-
-.solveme {
-    display: inline-block;
-    height: 20px;
-}
-
-.rights {
-    display: flex;
-    gap: 25px;
-}
-
-
-.rights a {
-    text-decoration: none;
-    color: black;
-    padding-top: 10px;
-}
-
-.rights #signup {
-    background-color: #108a08;
-    padding: 10px 20px;
-    border-radius: 12px;
-    color: white;
-    margin-right: 20px;
-}
-
-.rights #signup:hover {
-    background-color: #0cb800;
-    color: white;
-
-}
-
-header {
-    display: grid;
-    grid-template-columns: 1fr 1.4fr; 
-    grid-template-rows: auto;
-    align-items: center; 
-    gap: 1%; 
-    padding: 0 10px; 
-}
-
-.imgheader{
-    width: 100%; 
-    height: 100%;
-    border-radius: 50px 50px;
-}
-
-.leftside{
-    flex-direction: column;
-}
-
-.heading1{
-    font-size: clamp(32px, 6vw, 86px);
-    margin:100px 0 10px 80px;
-}
-
-.heading2{
-    font-size: clamp(18px, 4vw, 36px);
-    color: rgb(82, 66, 66);
-    margin-left:100px;
-
-}
-
-.getstarted{
-    font-size: clamp(18px, 4vw, 24px);
-    text-align: center;
-    max-width: 400px;
-    background-color: #108A00;
-    padding:10px 0;
-    border-radius: 20px;
-    cursor:pointer;
-    margin-left:100px;
-}
-
-.getstarted a{
-    color:white;
-    text-decoration: none;
-}
-
-.getstarted:hover {
-    background-color:#1ed905 ;
-}
-
-
-.container {
-    display:grid;
-    grid-template-columns: 300px 1fr;
-    grid-template-rows: 630px 1fr;
-    gap:30px;
-    margin:40px 30px 0 40px;
-    border-radius: 30px;
-} 
-
-.aside{
-    background-color: #cacaca;
-    border-radius: 30px;
-    padding: 35px;
-}
-
-.aside h1{
-    font-size: 32px;
-}
-
-.aside p{
-    font-size: 20px;
-}
-
-.mainpart{
-    background-color: #cacaca;
-    border-radius: 30px;
-    padding: 30px;
-
-}
-
-.proj {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: min-content;
-    gap: 20px; 
-    padding: 20px;
-    border-radius: 20px;
-    background-color: white;
-    margin-bottom: 30px;
-}
-.proj h2, .proj ul, .proj li {
-    margin: 0;
-    padding: 0 0 0 20px;
-}
-
-.footer {
-
-    margin-top: 1vh;
-    width: 100%;
-    background-color: rgb(255, 255, 255);
-    border-radius: 5px;
-    padding: 3vh;
-    text-align: center;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.foot {
-    width: 100%;
-    text-align: center;
-    display: inline-block;
-    transition: color 0.5s ease;
-    font-size: 10px;
-
-      @media (min-width: 768px) {
-        font-size: 12px;
-    }
-
-    @media (min-width: 1200px) {
-        font-size: 14px;
-    }
-    
-    @media (min-width:1400px) {
-        font-size:16px;
-    }
-
-    @media(min-width: 1600px){
-        font-size: 18px;
-    }
-    @media (min-width: 1800px) {
-        font-size: 20px;
-    }
-
-}
-
-.foot:hover {
-    color: green;
-}
