--- a/styleWork.css
+++ b/styleWork.css
@@ -254,7 +254,8 @@ header {
     }
 
     .card {
-        background-color: #E7EFFF;
+        
+        background-color: black;
         width: 300px;
         height: 330px;
         margin-bottom: 30px;
@@ -272,6 +273,7 @@ header {
     .card h2 {
         margin: 8px 0;
         font-size: 20px;
+        
     }
 
     .card p {
